# match-variant

./: pyproject.toml
src/match_variant/: _enum.py  _maybe.py  _result.py  _variant.py
tests/: test_variant.py
